Fixed Z-Index in the petstore

--- a/WeatherKitty.css
+++ b/WeatherKitty.css
@@ -14,6 +14,7 @@ weather-kitty-forecast {
   position: relative;
   width: 5.67em;
   aspect-ratio: 1 / 1;
+  z-index: 0;
   display: grid; /* Grid (1x1) is working better for this use case than flex  */
 
   padding: 0.1em;
@@ -102,7 +103,7 @@ weather-kitty-forecast:hover {
     width: 15em;
     height: auto;
     opacity: 1;
-    z-index: 1;
+    z-index: 10;
   }
 }
 
